docs : html 뼈대 작성중

--- a/public/www/index.html
+++ b/public/www/index.html
@@ -56,7 +56,44 @@
           <section class="main-left">
             <div class="main-left-div">
               <!-- 유사한 형태(1) : last-donation -->
-              <div class="last-donation cnt-money"></div>
+              <div class="last-donation cnt-money br-12">
+                <h4 class="last-donation-comment">
+                  마지막 기부자를 찾습니다 👀
+                </h4>
+                <p class="last-donation-text">
+                  목표 달성까지 얼마 남지 않았어요!
+                </p>
+                <div class="cnt-donation-content">
+                  <div class="cnt-donation-left br-12">
+                    <div class="cnt-donation-money"></div>
+                    <div class="cnt-donation-img"></div>
+                  </div>
+                  <div class="cnt-donation-right">
+                    <div class="cnt-donation-sub-title">
+                      <strong>
+                        자립준비청년 우현이, 사회 첫걸음에 날개를 달아주세요!
+                      </strong>
+                      <div class="last-donation-goal">
+                        <div class="bar-chart">
+                          <!-- 막대 그래프 (추후 수정) -->
+                        </div>
+                        <!-- 추후 수정 -->
+                        <div class="progress-info">
+                          <div>
+                            <span>5,000,000원</span>
+                            <span>6,000,000원 목표</span>
+                          </div>
+                          <div>날짜 입력</div>
+                        </div>
+                      </div>
+                      <div class="last-donation-btn">
+                        <button type="button" class="button1">하트 응원</button>
+                        <button type="button" class="button1">기부하기</button>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
               <!-- 유사한 형태(2) : donation-list-div -->
               <div class="donation-list-div"></div>
               <!-- 유사한 형태(1) : last-donation-->
