docs : main-right 구조 작업중

--- a/public/www/index.html
+++ b/public/www/index.html
@@ -149,10 +149,50 @@
           <section class="main-right">
             <div class="main-right-div">
               <div class="main-right-slide">
-                <div class="mr-slide-donation"></div>
-                <div class="mr-slide-review"></div>
+                <div class="mr-slide-donation">
+                  <a href="#" class="mr-slide-donation-link">
+                    <span class="mr-slide-donation-description">
+                      우리가 <br />같이만든 변화들
+                    </span>
+                  </a>
+                  <p class="mr-slide-donation-date">2024.05.06 기준</p>
+                  <div class="mr-slide-donation-img"></div>
+                  <div class="mr-slide-donation-all">
+                    <a href="#"">
+                      <div class="mr-slide-donation-money">
+                        <i class="mr-slide-donation-icon"></i>
+                        <strong>총 기부금</strong>
+                        <span class="mr-slide-money-total">74,230,572,545원</span>
+                      </div>
+                    </a>
+                  </div>
+                </div>
+                <div class="mr-slide-review">
+                  <a href="#">
+                    <h4>따뜻한 후기</h4>
+                  </a>
+                  <a href="#">
+                  <div>
+                    <strong>
+                      청년들의 장바구니가 집시님들의 도움으로 가득 찼습니다!
+                    </strong>
+                    <p>
+                      외로움에 익숙했던 청년들에게 집사들의 따뜻한 도움이 모여
+                      188,500,000원의 후원금이 모였습니다. 이 소중한 후원금은
+                      지난해, 100여 명의 청년들에게 식재료로 전달되었습니다.
+                    </p>
+                  </div>
+                </a>
+                </div>
               </div>
-              <div class="main-right-banner"></div>
+              <div class="main-right-banner">
+                <a href="#">
+                  <div class="mr-banner-frame">
+                    <strong class="mr-banner-txt">마지막까지 기다리고 있어요!</strong>
+                    <p class="mr-banner-link">종료임박 모금함 ></p>
+                  </div>
+                </a>
+              </div>
               <div class="main-right-score"></div>
               <div class="main-right-news"></div>
             </div>
