--- a/public/www/index.html
+++ b/public/www/index.html
@@ -9,6 +9,7 @@
       rel="stylesheet"
       href="//cdn.jsdelivr.net/npm/xeicon@2.3.3/xeicon.min.css"
     />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="stylesheet" href="./css/reset.css" />
     <link rel="stylesheet" href="./css/common.css" />
     <!-- header.css (담당자 : 박성호) -->
@@ -336,27 +337,37 @@
 
               <!-- 슬라이드 -->
 
-              <div class="main-left-slide">
+              <div class="main-left-slide br-12">
+                <!-- <div class="left-slide-pagecnt">페이지수</div> -->
                 <!-- Start 상단 슬라이드 -->
-                <div class="swiper topslide">
-                  <div class="swiper-wrapper">
+                  <div class="swiper left-swiper">  
+                    <div class="swiper-wrapper left-swiper-wrapper">
+
+                      
                     <!-- 외부 데이터 연동 -->
-                    <!-- <div class="swiper-slide">
-                      <a href="#">
-                        <p class="slide-title">
-                          카카오브레인의<br />
-                          연구문화
-                        </p>
-                      </a>
-                    </div>
-                    <div class="swiper-slide">
-                      <a href="#">
-                        <p class="slide-title">
-                          카카오브레인의<br />
-                          연구문화
-                        </p>
-                      </a>
+                    <!-- 
+                        <div class="swiper-slide">
+                          <a href="#">
+                            <div class="left-swiper-contents">
+                              <div class="left-swiper-img"></div>
+                              <div class="left-swiper-info">
+                                <strong>카카오톡 그린 사용 설명서</strong>
+                                <span>카카오 그린 사용 설명서를 실천하고 건강한 디지털 습관을 가져볼까요?</span>
+                                <button type="button">
+                                  <span>#</span>
+                                  <span>모두의행동</span>
+                                </button>
+                                <em class="">
+                                  <i
+                                  src="./images/footer_facebook_gray80.svg"
+                                  style="width: 10px; height: 10px"></i>
+                                5,327 명 행동중
+                                </em>
+                              </div>
+                            </div>
+                          </a>
                     </div> -->
+
                   </div>
                   <div class="swiper-pagination"></div>
                 </div>
